--- a/search.html
+++ b/search.html
@@ -24,5 +24,5 @@ layout: search
   };
 </script>
 
-<script src="{{ site.baseurl }}/js/lunr.min.js"></script>
-<script src="{{ site.baseurl }}/js/search.js"></script>
+<script src="/BIM/js/lunr.min.js"></script>
+<script src="/BIM/js/search.js"></script>
