return to the hard coded baseurl solution due to bug in github

--- a/search.html
+++ b/search.html
@@ -1,9 +1,6 @@
 ---
 layout: search
 ---
-<script src="{{ site.baseurl }}/js/lunr.min.js"></script>
-<script src="{{ site.baseurl }}/js/search.js"></script>
-
 <form action="{{ site.baseurl }}/search.html" method="get">
   <label for="search-box">Search</label>
   <input type="text" id="search-box" name="query">
@@ -27,3 +24,5 @@ layout: search
   };
 </script>
 
+<script src="/BIM/js/lunr.min.js"></script>
+<script src="/BIM/js/search.js"></script>
